# inspirational-quote-rust

./: .env  Cargo.toml  README.md
quotesapi/: Cargo.toml
quotesapi/src/: lib.rs
src/: lib.rs  main.rs  theme.rs
tests/: demo.rs
